# Quench

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  real_models.py  reporting.py  runner.py  suites.py
native/: Cargo.toml  pyproject.toml
native/src/: lib.rs
src/quench/: __init__.py  cli.py
src/quench/analyze/: __init__.py  detector.py  profiler.py
src/quench/backends/: __init__.py  base.py  python_backend.py  registry.py  rust_backend.py
src/quench/codec/: __init__.py  auto.py  decoder.py  encoder.py  metadata.py  strategies.py
src/quench/core/: __init__.py  config.py  exceptions.py  header.py  types.py
src/quench/delta/: __init__.py  analysis.py  cli.py  engine.py  manifest.py  resolve.py  strategy.py
src/quench/entropy/: __init__.py  bitstream.py  freq_model.py  rans.py
src/quench/integrations/: __init__.py  safetensors.py
src/quench/io/: __init__.py  container.py  streaming.py  tiny_bundle.py
src/quench/quantize/: __init__.py  base.py  calibrate.py  importance.py  uniform.py
tests/: conftest.py
tests/integration/: test_benchmark_backends.py  test_delta_e2e.py  test_models.py  test_roundtrip.py  test_streaming_phase4.py  test_weights_vs_zstd.py
tests/unit/: test_analyze.py  test_backends.py  test_benchmark_reporting.py  test_cli.py  test_codec.py  test_config.py  test_container.py  test_delta.py  test_entropy.py  test_freq_model.py  test_header.py  test_quantize.py  test_real_model_benchmarks.py  test_security.py  test_strategies_phase4.py  test_transforms.py  test_types.py
tools/: compress_model.py  download_models.py  profile_tensor.py  run_benchmarks.py  summarize_benchmarks.py
(+6 files in other folders)
